[tool.poetry]
name = "dockerfiles"
version = "0.1.0"
description = ""
authors = ["Cortex XSOAR"]
readme = "README.md"

[tool.poetry.dependencies]
python = "~3.11" # because of this issue we still using 3.11 https://github.com/mandiant/stringsifter/issues/41
stringsifter = "*"
scikit-learn = "*"
setuptools = ">=78.1.1"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
