[tool.poetry]
name = "dockerfiles"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "~3.11"
cloakensdk = "*"
confluent-kafka = "2.1.1"
fp-ngfw-smc-python = "*"
pydantic = ">=2.5.3"
duo-client = "*"
pycti = "*"
pyhcl = "*"
cymruwhois = "*"
jbxapi = "*"
domaintools-api = "*"
cyberintegrations = "*"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
