[tool.poetry]
name = "dockerfiles"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "~3.12"
cloakensdk = "*"
confluent-kafka = {extras = ["avro"], version = "==1.7.0"} # need specific version of os package, see CIAC-8412
fp-ngfw-smc-python = "*"
pydantic = ">=2.5.3"
duo-client = "*"
pycti = "*"
pyhcl = "*"
cymruwhois = "*"
jbxapi = "*"
domaintools-api = "*"
cyberintegrations = "*"
setuptools = ">=80.9.0" # need just because the version comes from the dependencies are lower, we can remove it once ready


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
