[tool.poetry]
name = "dockerfiles"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "~3.12"
demisto-sdk = "*"
demisto-py = "*"
mypy_extensions = "1.0.0"
protobuf = ">=6.33.2"
pyjwt = ">=2.12.0"
pyasn1 = ">=0.6.2"
orjson = ">=3.11.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
