[tool.poetry]
name = "dockerfiles"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "~3.12"
demisto-sdk = "*"
demisto-py = "*"
mypy_extensions = "1.0.0"
nltk = ">=3.9.2"
pyasn1 = ">=0.6.2"
protobuf = ">=6.33.2,<7.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
