[package]
name = "tree-sitter-powershell"
description = "powershell grammar for the tree-sitter parsing library"
version = "0.25.9"
keywords = ["incremental", "parsing", "powershell"]
categories = ["parsing", "text-editors"]
repository = "https://github.com/tree-sitter/tree-sitter-powershell"
edition = "2018"
license = "MIT"

build = "bindings/rust/build.rs"
include = ["bindings/rust/*", "grammar.js", "queries/*", "src/*"]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter-language = "0.1"

[build-dependencies]
cc = "1.0"

[dev-dependencies]
tree-sitter = "0.25.6"
